--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "messanger",
   "version": "1.0.0",
   "description": "web messanger from course from Yandex.Practicum",
-  "main": "index.js",
   "scripts": {
-    "start": "parcel src/pages/index.hbs --no-cache && parcel watch ./*",
-    "build": "parcel build index.hbs"
+    "watch": "parcel src/pages/index.hbs --no-cache && parcel watch ./*",
+    "start": "node index.js",
+    "build": "parcel build src/pages/index.hbs"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "^1.0.9",
     "autoprefixer": "^10.4.7",
+    "express": "^4.18.1",
     "parcel": "^2.3.2",
     "postcss": "^8.4.14",
     "postcss-nested": "^5.0.6",
